# ImageBind

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  __init__.py  cog.yaml  data.py  index.html  model_card.md  paper.html  predict.py  pyproject.toml  ranker.py  requirements.txt  setup.py
.github/workflows/: ai-pr-reviewer.yml  issue-solver.yml
assets/: ga.js  style.css
imagebind/: __init__.py  data.py  model_splitter.py  modular_imagebind.py
imagebind.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
imagebind/models/: helpers.py  imagebind_model.py  modular_imagebind_model.py  multimodal_preprocessors.py  transformer.py
models/: helpers.py  imagebind_model.py  multimodal_preprocessors.py  transformer.py
papers/: imagebind-unified-embeddings.md
